# oration

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  Vagrantfile  aliases.js  index.html  oration.yaml  search-index.js
ansible/: staging.yml
ansible/config/: nginx.vhost.conf  oration.service
ansible/node/: packages.yml
app/: brunch-config.js  elm-package.json  package.json  webpack.config.js
app/css/: oration.css
app/elm/: LocalStorage.elm  Main.elm  Markdown.elm  Models.elm  Msg.elm  Ports.elm  Style.elm  Stylesheets.elm  Update.elm  Util.elm  View.elm  elm-package.json  elm.json
app/js/: app.js  main.js  oration.js
app/static/: index.html  post-1.html  post-2.html
implementors/error_chain/: trait.ChainedError.js
migrations/20170716171820_create_comments/: down.sql  up.sql
migrations/20170719094701_create_oration/: down.sql  up.sql
oration/: CommentId.t.html  Initialise.t.html  PostComments.t.html  _IMPL_SERIALIZE_FOR_Initialise.v.html  _IMPL_SERIALIZE_FOR_PostComments.v.html  all.html  constant._IMPL_SERIALIZE_FOR_Initialise.html  constant._IMPL_SERIALIZE_FOR_PostComments.html  delete_comment.v.html  dislike_comment.v.html  edit_comment.v.html  fn.delete_comment.html  fn.dislike_comment.html  fn.edit_comment.html  fn.get_comment_count.html  fn.get_comments.html  fn.get_session.html  fn.index.html  fn.initialise.html  fn.like_comment.html  fn.main.html  fn.new_comment.html  fn.print_errors.html  fn.rocket.html  fn.rocket_route_fn_delete_comment.html  fn.rocket_route_fn_dislike_comment.html  fn.rocket_route_fn_edit_comment.html  fn.rocket_route_fn_get_comment_count.html  fn.rocket_route_fn_get_comments.html  fn.rocket_route_fn_get_session.html  fn.rocket_route_fn_index.html  fn.rocket_route_fn_initialise.html  fn.rocket_route_fn_like_comment.html  fn.rocket_route_fn_new_comment.html  get_comment_count.v.html  get_comments.v.html  get_session.v.html  index.html  initialise.v.html  like_comment.v.html  (+38 more)
oration/config/: Author.t.html  (+35 more)
src/: config.rs  data.rs  db.rs  errors.rs  main.rs  models.rs  notify.rs  schema.rs  static_files.rs  tests.rs
staging/: prepare.yml  services.yml  staging.yml
(+12514 files in other folders)
