[package]
name = "oration"
version = "0.1.0"
authors = ["Tim DuBois <tim@neophilus.net>"]

[dependencies]
clippy = {version = "*", optional = true}
dotenv = "0.10"
rand = "0.3"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
diesel = { version = "0.16", features = ["sqlite","chrono"] }
diesel_codegen = { version = "0.16", features = ["sqlite"] }
r2d2-diesel = "0.16"
r2d2 = "0.7"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
error-chain = "0.11"
log = "0.3"
yansi = "0.3"
serde_yaml = "0.7"
chrono = "0.4"
reqwest = "0.7"
argon2rs = { version = "0.2", features = ["simd"] }
rust-crypto = "^0.2"
itertools = "0.6"
